--- a/view/email/layout/html.phtml
+++ b/view/email/layout/html.phtml
@@ -9,7 +9,7 @@
 <table width="500" border="0" align="center" cellpadding="0" cellspacing="0" style="font-family: Arial, Helvetica, sans-serif;">
     <tr>
         <td width="20">&nbsp;</td>
-        <td width="460"><img src="<?=$this->site?>/img/studios301.gif" width="96" height="106" alt="Studios 301" /></td>
+        <td width="460"><img src="<?=$site_name?>/img/studios301.gif" width="96" height="106" alt="Studios 301" /></td>
         <td width="20">&nbsp;</td>
     </tr>
     <tr>
