--- a/view/email/layout/html.phtml
+++ b/view/email/layout/html.phtml
@@ -2,31 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Email from Studios301</title>
+    <title>Email</title>
 </head>
 
 <body>
-<table width="500" border="0" align="center" cellpadding="0" cellspacing="0" style="font-family: Arial, Helvetica, sans-serif;">
-    <tr>
-        <td width="20">&nbsp;</td>
-        <td width="460"><img src="<?=$site_name?>/img/studios301.gif" width="96" height="106" alt="Studios 301" /></td>
-        <td width="20">&nbsp;</td>
-    </tr>
-    <tr>
-        <td>&nbsp;</td>
-        <td><?=$content?></td>
-        <td>&nbsp;</td>
-    </tr>
-    <tr>
-        <td>&nbsp;</td>
-        <td align="center" style="font-size: 12px;"><p><strong>Studios 301</strong><br />
-                18 Mitchell Rd Alexandria<br />
-                NSW 2015 Australia<br />
-                +61 (02) 9698 5888</p>
-            <p>ABN: 81 083 195 224</p></td>
-        <td>&nbsp;</td>
-    </tr>
-</table>
+<?=$content?>
 </body>
 </html>
--
